--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 
 
+::-webkit-scrollbar {
+    display: none;
+  }
+  
+  html {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
 input {
     @apply focus:outline-none
 }
